--- a/src/twig/index.twig
+++ b/src/twig/index.twig
@@ -60,7 +60,7 @@
           <div class="product__add">
             <button type="button" class="btn btn__cart">
               <svg class="btn__cart-icon">
-                <use xlink:href="assets/img/icons.svg#basket"></use>
+                <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
             </button>
@@ -68,7 +68,9 @@
         </div>
 
        <div class="product__boxed">
-         <h3 class="product__boxed-title">ELLERY X M'O CAPSULE</h3>
+         <h3 class="product__boxed-title">
+           <a href="product.html" class="product__boxed-link">ELLERY X M'O CAPSULE</a>
+         </h3>
 
          <p class="product__boxed-text">
            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
@@ -85,7 +87,7 @@
           <div class="product__add">
             <button type="button" class="btn btn__cart">
               <svg class="btn__cart-icon">
-                <use xlink:href="assets/img/icons.svg#basket"></use>
+                <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
             </button>
@@ -93,7 +95,9 @@
         </div>
 
        <div class="product__boxed">
-         <h3 class="product__boxed-title">ELLERY X M'O CAPSULE</h3>
+         <h3 class="product__boxed-title">
+           <a href="product.html" class="product__boxed-link">ELLERY X M'O CAPSULE</a>
+         </h3>
 
          <p class="product__boxed-text">
            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
@@ -110,7 +114,7 @@
           <div class="product__add">
             <button type="button" class="btn btn__cart">
               <svg class="btn__cart-icon">
-                <use xlink:href="assets/img/icons.svg#basket"></use>
+                <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
             </button>
@@ -118,7 +122,9 @@
         </div>
 
        <div class="product__boxed">
-         <h3 class="product__boxed-title">ELLERY X M'O CAPSULE</h3>
+         <h3 class="product__boxed-title">
+           <a href="product.html" class="product__boxed-link">ELLERY X M'O CAPSULE</a>
+         </h3>
 
          <p class="product__boxed-text">
            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
@@ -135,7 +141,7 @@
           <div class="product__add">
             <button type="button" class="btn btn__cart">
               <svg class="btn__cart-icon">
-                <use xlink:href="assets/img/icons.svg#basket"></use>
+                <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
             </button>
@@ -143,7 +149,9 @@
         </div>
 
        <div class="product__boxed">
-         <h3 class="product__boxed-title">ELLERY X M'O CAPSULE</h3>
+         <h3 class="product__boxed-title">
+           <a href="product.html" class="product__boxed-link">ELLERY X M'O CAPSULE</a>
+         </h3>
 
          <p class="product__boxed-text">
            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
@@ -160,7 +168,7 @@
           <div class="product__add">
             <button type="button" class="btn btn__cart">
               <svg class="btn__cart-icon">
-                <use xlink:href="assets/img/icons.svg#basket"></use>
+                <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
             </button>
@@ -168,7 +176,9 @@
         </div>
 
        <div class="product__boxed">
-         <h3 class="product__boxed-title">ELLERY X M'O CAPSULE</h3>
+         <h3 class="product__boxed-title">
+           <a href="product.html" class="product__boxed-link">ELLERY X M'O CAPSULE</a>
+         </h3>
 
          <p class="product__boxed-text">
            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
@@ -185,7 +195,7 @@
           <div class="product__add">
             <button type="button" class="btn btn__cart">
               <svg class="btn__cart-icon">
-                <use xlink:href="assets/img/icons.svg#basket"></use>
+                <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
             </button>
@@ -193,7 +203,9 @@
         </div>
 
        <div class="product__boxed">
-         <h3 class="product__boxed-title">ELLERY X M'O CAPSULE</h3>
+         <h3 class="product__boxed-title">
+           <a href="product.html" class="product__boxed-link">ELLERY X M'O CAPSULE</a>
+         </h3>
 
          <p class="product__boxed-text">
            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
