--- a/src/twig/templates/_top.twig
+++ b/src/twig/templates/_top.twig
@@ -6,7 +6,7 @@
 
     <div class="top__search">
       <svg class="top__search-icon">
-        <use xlink:href="assets/img/icons.svg#search"></use>
+        <use xlink:href="assets/img/sprite.svg#search"></use>
       </svg>
     </div>
 
@@ -16,13 +16,13 @@
 
     <a href="#" class="top__login">
       <svg class="top__login-icon">
-        <use xlink:href="assets/img/icons.svg#user"></use>
+        <use xlink:href="assets/img/sprite.svg#user"></use>
       </svg>
     </a>
 
-    <a href="#" class="top__basket" data-basket-amount="5">
+    <a href="cart.html" class="top__basket" data-basket-amount="5">
       <svg class="top__basket-icon">
-        <use xlink:href="assets/img/icons.svg#basket"></use>
+        <use xlink:href="assets/img/sprite.svg#basket"></use>
       </svg>
     </a>
 
@@ -99,7 +99,7 @@
 
       <button class="menu__close js-menu__close">
         <svg class="menu__close-icon">
-          <use xlink:href="assets/img/icons.svg#close"></use>
+          <use xlink:href="assets/img/sprite.svg#close"></use>
         </svg>
       </button>
     </nav>
